ENT-11112: Enabled X509EdDSAEngineTest (#7595)